--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,56 +1,90 @@
-.main_container {
-    width: 100%;
-    height: 100%;
+:root {
+
+}
+
+body {
+    margin: 0;
+    padding: none;
 }
 
 textarea {
-  line-height:1.5;
+    line-height: 1.5;
 }
 
 span {
-  cursor: pointer;
-  line-height:1.5;
+    cursor: pointer;
+    line-height: 1.5;
 }
 
-.analyze_button_container {
-  display: block;
-  width: 100%;
-  text-align: center;
-  padding:  10px;
-}
-
-.outline_container {
+.analyze-button-container {
     display: block;
-    width: 30%;
-    float: left;
-    text-align: left;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    padding: 1em;
+    text-align: center;
+    padding: 10px;
+}
+
+.analyze-button-container button {
+    margin: 10px;
+    padding: 15px 30px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #f09819;
+    background-image: linear-gradient(
+        45deg,
+        #ff512f 0%,
+        #f09819 51%,
+        #ff512f 100%
+    );
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.analyze-button-container button:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+}
+
+.analyze-button-container button:active {
+    transform: scale(0.95);
+}
+
+.content-container {
+    display: flex;
+    margin: 20px;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.container {
+    width: 50%;
+    text-align: center;
+}
+
+.container textarea {
+    width: 100%;
+    resize: vertical;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 10px;
+    outline: none;
+}
+
+.outline-tip {
+    background-color: aqua;
     position: relative;
 }
 
-.essay_container {
-    display: block;
-    width: 65%;
-    float: right;
-    text-align: left;
-    padding: 1em;
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-    position: relative;
-}
-
-.outline_tip {
-    background-color:aqua;
-    position: relative;
-}
-
-
-.text_tip {
-    background-color:aqua;
+.text-tip {
+    background-color: aqua;
     position: relative;
 }
 
@@ -61,10 +95,10 @@ span {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-  }
+}
 
 /* The actual popup */
-.popup .popup_text {
+.popup .popup-text {
     visibility: hidden;
     width: 500px;
     background-color: #555;
@@ -77,10 +111,10 @@ span {
     bottom: 125%;
     left: 50%;
     margin-left: -80px;
-  }
+}
 
-  /* Popup arrow */
-.popup .popup_text::after {
+/* Popup arrow */
+.popup .popup-text::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -89,96 +123,61 @@ span {
     border-width: 5px;
     border-style: solid;
     border-color: #555 transparent transparent transparent;
-  }
+}
 
-  /* Toggle this class - hide and show the popup */
+/* Toggle this class - hide and show the popup */
 .popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
-  }
+}
 
-  /* Add animation (fade in the popup) */
+/* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
-    from {opacity: 0;} 
-    to {opacity: 1;}
-  }
-  
-  @keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
-  
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .err {
     color: red;
     font-weight: bold;
 }
 
 .HoverClass1:hover {
-  color: #FFFFFF !important; 
-  background-color: #f59b42 !important;
+    color: #ffffff !important;
+    background-color: #f59b42 !important;
 }
-
-
 
 /* Comment styling */
 .outline-comment-container {
-  border:#555 1px solid;
-  padding: 5px;
+    border: #555 1px solid;
+    padding: 5px;
 }
 
 .text-comment-container {
-  border:#555 1px solid;
-  padding: 5px;
-
+    border: #555 1px solid;
+    padding: 5px;
 }
 
 .tester {
-  display:block;
-  border: 1px blue solid;
-  
+    display: block;
+    border: 1px blue solid;
 }
 
 /* Highlight span on click */
 .highlighted {
-  background-color: #52b788 !important;
-}
-
-h2 {
-  text-align: center;
-  height: 100%;
-  margin: 0;
-  padding-bottom: 1em;
-}
-
-/* CSS */
-.button-87 {
-  margin: 10px;
-  padding: 15px 30px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  border-radius: 10px;
-  border: 0px;
-  font-weight: 700;
-  box-shadow: 0px 0px 14px -7px #f09819;
-  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-87:hover {
-  background-position: right center;
-  /* change the direction of the change here */
-  color: #fff;
-  text-decoration: none;
-}
-
-.button-87:active {
-  transform: scale(0.95);
+    background-color: #52b788 !important;
 }
