--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
+
 :root {
 
 }
@@ -5,6 +7,8 @@
 body {
     margin: 0;
     padding: none;
+
+    font-family: 'Inter', sans-serif;
 }
 
 textarea {
@@ -180,4 +184,23 @@ span {
 /* Highlight span on click */
 .highlighted {
     background-color: #52b788 !important;
+}
+
+.hidden {
+    display: none !important;
+}
+
+#loading {
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background: rgba(255, 255, 255, 0.432);
+    text-align: center;
+    position: absolute;
+    font-size: 30px;
+    font-weight: bold;
+    letter-spacing: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
