--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -12,17 +12,18 @@
     width: 70%;
 }
 
-.essayContainer textarea {
-    width: 100%;
+.editor {
+    overflow-y: scroll;
     height: 90vh;
-    border: 1px solid black;
     background: none;
     outline: none;
     padding: 15px;
     font-family: var(--font-family);
-    font-weight: bolder;
     resize: none;
     border-radius: 5px;
+    line-height: 1.5rem;
+    font-weight: bolder;
+    border: 1px solid black;
 }
 
 .cardsContainer {
@@ -30,6 +31,5 @@
     flex-direction: column;
     gap: 16px;
     width: 30%;
-    overflow-y: scroll;
     /* TODO: create scrollable container? */
 }
