--- a/src/globals.css
+++ b/src/globals.css
@@ -1,10 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
 :root {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif;
 }
 
 body {
     font-family: var(--font-family);
     margin: 0;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(209, 209, 209);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(179, 179, 179);
 }
