--- a/src/components/summaryCard/styles.module.css
+++ b/src/components/summaryCard/styles.module.css
@@ -4,10 +4,20 @@
     transition: 0.2s;
     cursor: pointer;
     border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+.selected {
+    background: rgb(255, 255, 255);
+    transform: translateX(-50px )
+}
+
+.selected:hover {
+    background: rgb(255, 255, 255) !important;
 }
 
 .container:hover {
-    background: rgba(209, 235, 253, 0.671);
+    background: rgb(209, 235, 253);
 }
 
 .header {
